# ROS2_Secure_Nodes

./: .gitignore  README.md  Readme.md  SECURE_COMMUNICATION.md
.devcontainer/: Dockerfile  Dockerfile.publisher  devcontainer.json  devcontainer.single.json  docker-compose.yml
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Handshake.msg  SignedData.msg
src/custom_msgs/srv/: Handshake.srv
src/secure_node/: CMakeLists.txt  package.xml
src/secure_node/launch/: publisher.launch.py  secure_nodes.launch.py  subscriber.launch.py
src/secure_node/src/: publisher_node.cpp  subscriber_node.cpp
tools/: inspect_signed_data.py
