<?xml version="1.0"?>
<package format="2">
  <name>secure_node</name>
  <version>0.0.0</version>
  <description>Secure publisher/subscriber nodes</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>custom_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>custom_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
  </export>
</package>
